[package]
name = "clashmap"
version = "6.1.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>", "Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2021"
rust-version = "1.67"
license = "MIT"
repository = "https://github.com/conradludgate/clashmap"
homepage = "https://github.com/conradludgate/clashmap"
description = "Sharded hashmap suitable for fast concurrent access"
readme = "README.md"
documentation = "https://docs.rs/clashmap"
keywords = ["atomic", "concurrent", "hashmap"]
categories = ["concurrency", "algorithms", "data-structures"]

[features]
default = []
raw-api = []
inline = ["hashbrown/inline-more"]

rayon = ["dep:rayon"]
serde = ["dep:serde"]
typesize = ["dep:typesize"]

[dependencies]
lock_api = "0.4.10"
parking_lot_core = "0.9.8"
hashbrown = { version = "0.15.0", default-features = false }
once_cell = "1.18.0"
crossbeam-utils = "0.8"
replace_with = "0.1.7"
polonius-the-crab = "0.4.2"

rayon = { version = "1.7.0", optional = true }
serde = { version = "1.0.188", optional = true, features = ["derive"] }
typesize = { version = "0.1.8", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ["rayon", "raw-api", "serde", "typesize"]
