[package]
name = "dashmap"
version = "7.0.0-rc2"
authors = ["Joel Wejdenstål <jwejdenstal@icloud.com>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/xacrimon/dashmap"
homepage = "https://github.com/xacrimon/dashmap"
description = "Blazing fast concurrent HashMap for Rust."
readme = "README.md"
documentation = "https://docs.rs/dashmap"
keywords = ["atomic", "concurrent", "hashmap"]
categories = ["concurrency", "algorithms", "data-structures"]

[features]
all = ["raw-api", "typesize", "serde", "rayon", "arbitrary"]
raw-api = []
typesize = ["dep:typesize"]
inline-more = ["hashbrown/inline-more"]

[dependencies]
lock_api = "0.4.12"
parking_lot_core = "0.9.10"
equivalent = "1.0.1"
hashbrown = { version = "0.15.2", default-features = false }
serde = { version = "1.0.217", optional = true, features = ["derive"] }
cfg-if = "1.0.0"
rayon = { version = "1.10.0", optional = true }
arbitrary = { version = "1.4.1", optional = true }
crossbeam-utils = "0.8"
typesize = { version = "0.1.13", default-features = false, features = ["hashbrown_15"], optional = true }

[package.metadata.docs.rs]
features = ["all"]
