[package]
name = "bencher"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"

[dependencies]
bustle = "0.3.2"
tracing-subscriber = "0.2.2"
num_cpus = "1.12.0"
dashmap = { path = ".." }

[[bench]]
name = "arc_mutex_std"
harness = false

[[bench]]
name = "arc_rwlock_std"
harness = false
