[package]
name = "dashmap-shard"
version = "0.1.0"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "A Rust port of Google's SwissTable hash map"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/hashbrown"
readme = "README.md"
keywords = ["hash", "no_std", "hashmap", "swisstable"]
categories = ["data-structures", "no-std"]
exclude = [".travis.yml", "bors.toml", "/ci/*"]
edition = "2018"
build = "build.rs"

[dependencies]
# For the default hasher
ahash = { version = "0.2.11", optional = true }

# For external trait impls
rayon = { version = "1.0", optional = true }
serde = { version = "1.0.25", default-features = false, optional = true }

# When built as part of libstd
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.2", optional = true }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[build-dependencies]
autocfg = "0.1.4"

[dev-dependencies]
lazy_static = "1.2"
rand = "0.5.1"
rayon = "1.0"
rustc-hash = "1.0"
serde_test = "1.0"
doc-comment = "0.3.1"

[features]
default = ["ahash"]
nightly = []
rustc-internal-api = []
rustc-dep-of-std = ["nightly", "core", "compiler_builtins", "alloc", "rustc-internal-api"]
raw = []

[package.metadata.docs.rs]
features = ["nightly", "rayon", "serde", "raw"]
